<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.example</groupId>
	<artifactId>restaurant-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Restaurant Service - Parent</name>
	<description>Parent POM cho Restaurant Service (Multi-module)</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/>
	</parent>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<!-- Các module con -->
	<modules>
		<module>restaurant-domain/restaurant-domain-core</module>
		<module>restaurant-domain/restaurant-application-service</module>
		<module>restaurant-dataaccess</module>
		<module>restaurant-messaging</module>
		<module>restaurant-container</module>
	</modules>

	<!-- Dependency Management -->
	<dependencyManagement>
		<dependencies>
			<!-- Internal Modules -->
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>restaurant-domain-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>restaurant-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>restaurant-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>restaurant-messaging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>restaurant-container</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Common Messaging -->
			<dependency>
				<groupId>com.example</groupId>
				<artifactId>common-messaging</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies shared cho tất cả modules -->
	<dependencies>
		<!-- Common Messaging -->
		<dependency>
			<groupId>com.example</groupId>
			<artifactId>common-messaging</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<source>21</source>
						<target>21</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>